--- a/index.html
+++ b/index.html
@@ -63,5 +63,12 @@
 
         </main>
 
+    
+
+          
+          <footer>&copy; Copyright 2020 rockTharsh</footer>
+   
+
+
     </body>
 </html>
